Aligned and fix the hover effect of the navbar
Fixed the  space between between Contact and Join HNG button
I also fixed the hover effect of the navbar,  before the Join HNG link was highlighted.

--- a/css/main.css
+++ b/css/main.css
@@ -57,6 +57,33 @@ width: 55%;
 z-index: -1;
 }
 
+#join-hng{
+	border-radius: 3px !important;
+	padding: none !important;
+	color: #fff !important;
+	background: none !important;
+	transition: none ! important;
+}
+ 
+ header .header-links {
+	align-self: center;
+	border-radius: 3px;
+    padding: 0.3rem 0.3rem !important;
+}
+
+#join-hng:hover{
+	color: #fff !important;
+background:#00AEFF !important;
+box-shadow: none !important;
+}
+
+header .header-links:hover {
+    transform: none !important;
+	color: #fff !important;
+background:#00AEFF !important;
+box-shadow: none !important;
+}
+
 .containerGrid {
 display: grid;
 
@@ -227,9 +254,6 @@ color: #333333;
 color: #084482;
 }
 
-.accordion_tab{
-  margin-left:15%;
-}
 @media (max-width: 860){
   footer {
     width: auto;
@@ -300,8 +324,13 @@ font-size: 1.05em;
 #welcome-story {
 font-size: 1.2em;
 }
-
-
+  
+  #join-hng{
+	width: 50%;
+	font-size: 15px ;
+	margin-left: 8px;
+   }
+  
 }
 
 @media screen and (max-width: 960px) {
@@ -396,7 +425,7 @@ margin-right: 1em;
 .card1 {
 margin-right: 1em;
 }
-
+ 
 }
 
 /*/////////////////////////////////////////////////////////////////*/
@@ -578,7 +607,9 @@ display: none;
 padding: 0;
 }
 
-
+#hng-logo {
+	  width: 40% !important;
+	}
 
 }
 
@@ -985,6 +1016,10 @@ margin-left: 5px;
     text-align: center;
     margin-bottom: 60px;
   }
+  
+  #hng-logo {
+	  width: 33% !important;
+	}
 }
 
 #wrapper {
@@ -1151,9 +1186,7 @@ margin-left: 5px;
 .lee{
   width: 85%;
 }
-.support{
-  width: 90%;
-}
+
 .sponsors__header{
   width:89%;
 }
@@ -1171,9 +1204,6 @@ margin-left: 5px;
 }
 .sponsors_button{
   width: 90%;
-}
-.tripp{
-  width: 85%;
 }
 
 #zz{
